localized private page

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "node src/i18n/transform.js && tsc && svbuild -c src/browser/svbuild.config.js && svbuild -c src/browser/webui/svbuild.config.js",
     "dev": "npm run build && electron .",
     "dev-inspect": "npm run build && electron . --inspect",
-    "localize": "node src/i18n/transform.js",
+    "localize": "node src/i18n/fill.js && node src/i18n/transform.js",
     "begin": "npm install && node svlc/hack_empty_svelte_styles.js && cd src/browser/webui && npm install && svbuild && cd ../../.. && npm run build",
     "watch": "ilo tsc --watch + svbuild --watch -c src/browser/svbuild.config.js + svbuild --watch -c src/browser/webui/svbuild.config.js"
   },
