--- a/src/browser/templates/config.json5
+++ b/src/browser/templates/config.json5
@@ -52,7 +52,8 @@
       idleDetection: null,
       fullscreen: true
     },
-    sitePermissions: {}
+    sitePermissions: {},
+    adblockerWhitelist: []
   },
   behaviour: {
     onStart: {
