feat: ability to show bookmarks only on new tab

--- a/src/browser/templates/config.json5
+++ b/src/browser/templates/config.json5
@@ -6,7 +6,7 @@
     theme: "dark",
     defaultZoomFactor: 1,
     chromeZoomFactor: 0.9,
-    showBookmarks: false,
+    showBookmarks: 'newtab',
     backgroundImage: "${userdata}/background_images/${theme}/${size}/"
   },
   search: {
