fix: undocumented screen-wake-lock permission

--- a/src/browser/templates/config.json5
+++ b/src/browser/templates/config.json5
@@ -50,6 +50,8 @@
       pointerLock: false,
       openExternal: null,
       idleDetection: null,
+      sensors: null,
+      screenWakeLock: null,
       fullscreen: true
     },
     sitePermissions: {},
