feat: only show active tab group

--- a/src/browser/templates/config.json5
+++ b/src/browser/templates/config.json5
@@ -7,7 +7,9 @@
     defaultZoomFactor: 1,
     chromeZoomFactor: 1,
     showBookmarks: 'newtab',
-    backgroundImage: "${userdata}/background_images/${theme}/${size}/"
+    backgroundImage: "${userdata}/background_images/${theme}/${size}/",
+    onlyShowCurrentTabGroup: false,
+    showTabGroupColor: false
   },
   search: {
     available: [
