--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "electron": "^22.0.0",
     "ilo-mute": "^1.0.0",
     "svbuild": "^2.1.0",
+    "typed-emitter": "^2.1.0",
     "typescript": "^4.7.3",
     "yaml": "^1.10.2"
   },
