feat: ability to make `Ctrl`+`T` open a tab to the right of the current one + Ctrl+T will open the new tab in the active tab group if onlyShowCurrentTabGroup = true

--- a/src/browser/templates/config.json5
+++ b/src/browser/templates/config.json5
@@ -64,6 +64,7 @@
       type: "last-tabs"
     },
     maxRecentTabs: 10,
+    keyboardOpensTabNearby: false,
     downloadPath: null,
     a11yEnabled: null,
     spellChecker: {
