feat: globally disabling adblocker fix: the blocklist being re-downloaded every time fix: re-trying if the blocklist failed to download

--- a/src/browser/templates/config.json5
+++ b/src/browser/templates/config.json5
@@ -57,6 +57,7 @@
       fullscreen: true
     },
     sitePermissions: {},
+    adblockerEnabled: true,
     adblockerWhitelist: []
   },
   behaviour: {
